tests/typing/fail/clock-01.stderr
error: Variable `c` is undefined.
 --> tests/typing/fail/clock-01.rs:8:30
  |
8 |         a : float = 3.0 when c;
  |                              ^
